# dashj-android

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: tests.yml
dashj-bls/: bintray.gradle  build.gradle  install.gradle
dashj-bls/cpp/dashj-bls/: dashj-bls-signature-wrapper.cpp
dashj-bls/src/main/: AndroidManifest.xml
dashj-bls/src/main/cpp/: CMakeLists.txt
dashj-bls/src/main/java/org/dashj/bls/: Default.java
dashj-scrypt/: build.gradle  install.gradle
dashj-scrypt/src/main/: AndroidManifest.xml
dashj-scrypt/src/main/cpp/: scrypt_platform.h
dashj-x11/: build.gradle  install.gradle
dashj-x11/src/androidTest/java/org/dashj/x11/: ExampleInstrumentedTest.java
dashj-x11/src/main/: AndroidManifest.xml
dashj-x11/src/main/cpp/: CMakeLists.txt
dashj-x11/src/test/java/org/dashj/x11/: X11Test.java
gradle/wrapper/: gradle-wrapper.properties
zipj-x7/: build.gradle
zipj-x7/src/androidTest/java/org/dashj/x11/: ExampleInstrumentedTest.java
zipj-x7/src/main/: AndroidManifest.xml
zipj-x7/src/main/cpp/: CMakeLists.txt  hashblock.cpp  hashblock.h
zipj-x7/src/test/java/org/dashj/x11/: X11Test.java
